--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,124 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ 
+ body{
+  background-color: #272b30f6!important ;
+  color: white !important;
+}  
+.btn-login{
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* navbar */
+.navbar-brand{
+  font-family: 'Caveat', cursive;
+}
+.nav-link{
+ font-size: 18px; 
+}
+.text-register{
+  font-size: 14px;
+  font-weight: 400;
+}
+.form-color{
+  background-color: #32383E;
+  color: white!important;
+}
+
+
+ .cover{
+ margin: auto;
+    
+     background-image: url("268b599b-4f3a-44c6-acc5-78d5a4abbd81.jpeg");
+     background-position: center;
+     background-size: cover;
+     height: 50vh;
+     width: 75%;
+     
+ }
+ .overlay{
+    width: 100%;
+    height: 100%;
+    background-color: #212327e7;
+    
+ }
+ .overlay span{
+    color: aqua!important;
+    
+ }
+
+ 
+ *{
+  text-decoration: none!important;
+ }
+
+.item-all:hover{
+  transform: scale(1.1, 1.1)!important
+ }
+
+  .item-all {
+ transition:  all 1s !important;
+ border-bottom-left-radius: 7px!important;
+ border-bottom-right-radius: 7px!important;
+ background-color: #32383E!important;
+ 
+ } 
+
+ .item {
+  border-bottom-left-radius: 10px!important;
+  border-bottom-right-radius: 10px!important;
+transition:  all 1s !important;
+background-color: #32383E!important;
+
+} 
+.item:hover{
+  transform: scale(1.1, 1.1)!important
+ }
+
+
+/* spinner */
+ .spinner {
+  width: 60px;
+  height: 60px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+
+.text-small{
+  font-size: 10px;
+  border-radius: 10px;
+  color: black;
 }
